refactor: comprehensive code quality improvements across config