@@ -1,8 +1,6 @@
 package ua.lviv.bas.cinema.config.security;
 
-import java.util.Arrays;
-import java.util.List;
-
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -20,13 +18,13 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-
-import lombok.RequiredArgsConstructor;
 import ua.lviv.bas.cinema.config.security.jwt.JwtAuthenticationFilter;
 import ua.lviv.bas.cinema.config.security.jwt.JwtTokenProvider;
 import ua.lviv.bas.cinema.config.security.oauth2.CustomOAuth2UserService;
 import ua.lviv.bas.cinema.config.security.oauth2.OAuth2AuthenticationSuccessHandler;
 import ua.lviv.bas.cinema.config.security.user.CustomUserDetailsService;
+
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -34,83 +32,85 @@ import ua.lviv.bas.cinema.config.security.user.CustomUserDetailsService;
 @RequiredArgsConstructor
 public class WebSecurityConfig {
 
-	private final JwtTokenProvider jwtTokenProvider;
-	private final CustomUserDetailsService userDetailsService;
-	private final CustomOAuth2UserService customOAuth2UserService;
-	private final OAuth2AuthenticationSuccessHandler oAuth2AuthenticationSuccessHandler;
+    private final JwtTokenProvider jwtTokenProvider;
+    private final CustomUserDetailsService userDetailsService;
+    private final CustomOAuth2UserService customOAuth2UserService;
+    private final OAuth2AuthenticationSuccessHandler oAuth2AuthenticationSuccessHandler;
 
-	@Bean
-	PasswordEncoder passwordEncoder() {
-		return new BCryptPasswordEncoder();
-	}
+    @Bean
+    PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
+    }
 
-	@Bean
-	AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
-		return config.getAuthenticationManager();
-	}
+    @Bean
+    AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+        return config.getAuthenticationManager();
+    }
 
-	@Bean
-	JwtAuthenticationFilter jwtAuthenticationFilter() {
-		return new JwtAuthenticationFilter(jwtTokenProvider, userDetailsService);
-	}
+    @Bean
+    JwtAuthenticationFilter jwtAuthenticationFilter() {
+        return new JwtAuthenticationFilter(jwtTokenProvider, userDetailsService);
+    }
 
-	@Bean
-	CorsConfigurationSource corsConfigurationSource() {
-		CorsConfiguration configuration = new CorsConfiguration();
-		configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173"));
-		configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-		configuration
-				.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "Cache-Control"));
-		configuration.setExposedHeaders(List.of("Authorization"));
-		configuration.setAllowCredentials(true);
-		configuration.setMaxAge(3600L);
+    @Bean
+    CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration configuration = new CorsConfiguration();
+        configuration.setAllowedOrigins(List.of("http://localhost:5173"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type", "X-Requested-With", "Cache-Control"));
+        configuration.setExposedHeaders(List.of("Authorization"));
+        configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
 
-		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-		source.registerCorsConfiguration("/**", configuration);
-		return source;
-	}
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", configuration);
+        return source;
+    }
 
-	@Bean
-	SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-		http.cors(cors -> cors.configurationSource(corsConfigurationSource())).csrf(AbstractHttpConfigurer::disable)
-				.sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED))
-				.authorizeHttpRequests(auth -> auth.requestMatchers("/actuator/health", "/actuator/info").permitAll()
-						.requestMatchers("/swagger-ui/**", "/swagger-ui.html", "/api-docs/**", "/v3/api-docs/**",
-								"/swagger-resources/**", "/swagger-resources", "/configuration/ui",
-								"/configuration/security", "/webjars/**", "/error")
-						.permitAll()
+    @Bean
+    SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+        http.cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .csrf(AbstractHttpConfigurer::disable)
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED))
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers("/actuator/health", "/actuator/info").permitAll()
+                        .requestMatchers("/swagger-ui/**", "/swagger-ui.html", "/api-docs/**", "/v3/api-docs/**",
+                                "/swagger-resources/**", "/swagger-resources", "/configuration/ui",
+                                "/configuration/security", "/webjars/**", "/error")
+                        .permitAll()
+                        .requestMatchers("/api/auth/**").permitAll()
+                        .requestMatchers("/api/tokens/**").permitAll()
+                        .requestMatchers("/oauth2/**", "/login/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/movies/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/sessions").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/sessions/*/seats").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/promotions").permitAll()
+                        .requestMatchers("/api/liqpay/callback").permitAll()
+                        .requestMatchers("/api/bonus/**").authenticated()
+                        .requestMatchers("/api/bookings/**").authenticated()
+                        .requestMatchers("/api/payments/**").authenticated()
+                        .requestMatchers("/api/refunds/**").authenticated()
+                        .requestMatchers("/api/tickets/**").authenticated()
+                        .requestMatchers("/api/users/**").authenticated()
+                        .requestMatchers(HttpMethod.POST, "/api/sessions/*/seats/*/hold").authenticated()
+                        .requestMatchers(HttpMethod.DELETE, "/api/sessions/*/seats/*/hold").authenticated()
+                        .requestMatchers(HttpMethod.POST, "/api/promotions/claim").authenticated()
+                        .requestMatchers(HttpMethod.GET, "/api/promotions/claimed").authenticated()
+                        .requestMatchers("/admin/**").hasRole("ADMIN")
+                        .requestMatchers("/api/admin/**").hasAnyRole("ADMIN", "CONTENT_MANAGER")
+                        .anyRequest().authenticated()
+                )
+                .oauth2Login(oauth2 -> oauth2
+                        .authorizationEndpoint(endpoint -> endpoint.baseUri("/oauth2/authorize"))
+                        .redirectionEndpoint(endpoint -> endpoint.baseUri("/login/oauth2/code/*"))
+                        .userInfoEndpoint(userInfo -> userInfo.userService(customOAuth2UserService))
+                        .successHandler(oAuth2AuthenticationSuccessHandler)
+                )
+                .addFilterBefore(jwtAuthenticationFilter(), UsernamePasswordAuthenticationFilter.class)
+                .formLogin(AbstractHttpConfigurer::disable)
+                .httpBasic(AbstractHttpConfigurer::disable)
+                .logout(AbstractHttpConfigurer::disable);
 
-						.requestMatchers("/api/auth/**").permitAll().requestMatchers("/api/tokens/**").permitAll()
-						.requestMatchers("/oauth2/**", "/login/**").permitAll()
-
-						.requestMatchers(HttpMethod.GET, "/api/movies/**").permitAll()
-						.requestMatchers(HttpMethod.GET, "/api/sessions").permitAll()
-						.requestMatchers(HttpMethod.GET, "/api/sessions/*/seats").permitAll()
-						.requestMatchers(HttpMethod.GET, "/api/promotions").permitAll()
-
-						.requestMatchers("/api/liqpay/callback").permitAll()
-
-						.requestMatchers("/api/bonus/**").authenticated().requestMatchers("/api/bookings/**")
-						.authenticated().requestMatchers("/api/payments/**").authenticated()
-						.requestMatchers("/api/refunds/**").authenticated().requestMatchers("/api/tickets/**")
-						.authenticated().requestMatchers("/api/users/**").authenticated()
-						.requestMatchers(HttpMethod.POST, "/api/sessions/*/seats/*/hold").authenticated()
-						.requestMatchers(HttpMethod.DELETE, "/api/sessions/*/seats/*/hold").authenticated()
-						.requestMatchers(HttpMethod.POST, "/api/promotions/claim").authenticated()
-						.requestMatchers(HttpMethod.GET, "/api/promotions/claimed").authenticated()
-
-						.requestMatchers("/admin/**").hasRole("ADMIN").requestMatchers("/api/admin/**")
-						.hasAnyRole("ADMIN", "CONTENT_MANAGER")
-
-						.anyRequest().authenticated())
-				.oauth2Login(oauth2 -> oauth2.authorizationEndpoint(endpoint -> endpoint.baseUri("/oauth2/authorize"))
-						.redirectionEndpoint(endpoint -> endpoint.baseUri("/login/oauth2/code/*"))
-						.userInfoEndpoint(userInfo -> userInfo.userService(customOAuth2UserService))
-						.successHandler(oAuth2AuthenticationSuccessHandler))
-				.addFilterBefore(jwtAuthenticationFilter(), UsernamePasswordAuthenticationFilter.class)
-				.formLogin(AbstractHttpConfigurer::disable).httpBasic(AbstractHttpConfigurer::disable)
-				.logout(AbstractHttpConfigurer::disable);
-
-		return http.build();
-	}
+        return http.build();
+    }
 }
